Added core for contact page and linked pages in navbar

--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Cocktail Club</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function(){
+      emailjs.init("user_QYskVycifaK0UqgrfkXIi");
+    })();
+</script>
+</head>
+<body>
+    <section class="container-fluid">
+        <div>
+            <h3 class="sectionheader">Contact us below</h3>
+        </div>
+        <div class="center-form">
+            <form onsubmit="return sendMail(this);">
+            <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+            <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+            <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
+            </form>
+        </div>
+    </section>
+</body>
 
