Styled navbar to be horizontal

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             </a>
             <ul class="navmenu">
                 <li class="navitem">
-                    <a href="index.html">Home<i class="fas fa-cocktail" aria-hidden="true"></i></a>
+                    <a href="index.html">Home <i class="fas fa-cocktail" aria-hidden="true"></i></a>
                 </li>
                 <li class="navitem">
-                    <a href="about.html">About</a>
+                    <a href="about.html">About <i class="fas fa-glass-cheers"></i></a>
                 </li>
                 <li class="navitem">
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.html">Contact <i class="fas fa-wine-bottle"></i></a>
                 </li>
             </ul>
         </div>
