--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             </ul>
         </div>
     </header>
+    <section class="content">
+        <h2 class="searchheader">Search for your cocktail recipe below:</h2>
+        
+    </section>
 </body>
 </html>
