--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <section class="content">
-        <h2 class="searchheader">Search for your cocktail recipe below:</h2>
+        <h2 class="searchheader">Your favourite cocktail recipes, all in one place</h2>
         
     </section>
 </body>
