Added Footer contents

--- a/index.html
+++ b/index.html
@@ -31,5 +31,34 @@
         <h2 class="searchheader">Your favourite cocktail recipes, all in one place</h2>
         
     </section>
+    <footer>
+        <div>
+            <a href="index.html">
+                <img class="logo" src="assets/images/logo.png" alt="logo">
+            </a>
+        </div>
+        <div>
+            <ul class="list-inline socials">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/fskerritt">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/fayskerritt/">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://github.com/fayskerritt">
+                            <i class="far fa-envelope" aria-hidden="true"></i>
+                            <span class="sr-only">GitHub</span>
+                        </a>
+                    </li>
+                </ul>
+        </div>
+    </footer>
 </body>
 </html>
