--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cocktail Club</title>
@@ -10,35 +12,65 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-md sticky-top" id="navbar">
             <a href="index.html">
                 <img class="logo" src="assets/images/logo.png" alt="logo">
             </a>
-            <ul class="navmenu">
-                <li class="navitem">
-                    <a href="index.html">Home <i class="fas fa-cocktail" aria-hidden="true"></i></a>
-                </li>
-                <li class="navitem">
-                    <a href="about.html">About <i class="fas fa-glass-cheers"></i></a>
-                </li>
-                <li class="navitem">
-                    <a href="contact.html">Contact <i class="fas fa-wine-bottle"></i></a>
-                </li>
-            </ul>
-        </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nav-menu">
+                <ul class="navmenu">
+                    <li class="navitem">
+                        <a href="index.html">Home <i class="fas fa-cocktail" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="navitem">
+                        <a href="about.html">About <i class="fas fa-glass-cheers"></i></a>
+                    </li>
+                    <li class="navitem">
+                        <a href="contact.html">Contact <i class="fas fa-wine-bottle"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <section class="content">
         <h2 class="searchheader">Your favourite cocktail recipes, all in one place</h2>
+        <h2>Margarita</h2>
+        <h2>Mojito</h2>
+        <h2>Cosmopolitan</h2>
+        <h2>Tom Collins</h2>
+        <h2>Gin Bramble</h2>
+        <h2>Espresso Martini</h2>
+        <h2>Margarita</h2>
+        <h2>Mojito</h2>
+        <h2>Cosmopolitan</h2>
+        <h2>Tom Collins</h2>
+        <h2>Gin Bramble</h2>
+        <h2>Espresso Martini</h2>
+        <h2>Margarita</h2>
+        <h2>Mojito</h2>
+        <h2>Cosmopolitan</h2>
+        <h2>Tom Collins</h2>
+        <h2>Gin Bramble</h2>
+        <h2>Espresso Martini</h2>
+        <h2>Margarita</h2>
+        <h2>Mojito</h2>
+        <h2>Cosmopolitan</h2>
+        <h2>Tom Collins</h2>
+        <h2>Gin Bramble</h2>
+        <h2>Espresso Martini</h2>
         
     </section>
     <footer>
-        <div>
-            <a href="index.html">
-                <img class="logo" src="assets/images/logo.png" alt="logo">
-            </a>
-        </div>
-        <div>
-            <ul class="list-inline socials">
+        <div class="row">
+            <div class="col-4">
+                <a href="index.html">
+                    <img class="footer-logo" src="assets/images/logo.png" alt="logo">
+                </a>
+            </div>
+            <div class="col-4">
+                <ul class="list-inline socials">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com/fskerritt">
                             <i class="fab fa-facebook" aria-hidden="true"></i>
@@ -58,6 +90,10 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="col-4">
+                <h6 class="footer-item">© Cocktail Club 2020. <p>Crazy about Cocktails!</p></h6>
+            </div>
         </div>
     </footer>
 </body>
