--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cocktail Club</title>
@@ -11,13 +13,36 @@
     (function(){
       emailjs.init("user_QYskVycifaK0UqgrfkXIi");
     })();
-</script>
+    </script>
 </head>
 <body>
-    <section class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <a href="index.html">
+            <img class="logo" src="assets/images/logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>            
+        <div class="collapse navbar-collapse" id="nav-menu">
+            <ul class="navmenu ml-auto">
+                <li class="navitem">
+                    <a href="index.html">Home <i class="fas fa-cocktail" aria-hidden="true"></i></a>
+                </li>
+                <li class="navitem">
+                    <a href="info.html">Info <i class="fas fa-glass-cheers"></i></a>
+                </li>
+                <li class="navitem">
+                    <a href="contact.html">Contact <i class="fas fa-wine-bottle"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section>
         <div>
             <h3 class="sectionheader">Contact us below</h3>
         </div>
+    </section>
+    <section class="content">
         <div class="center-form">
             <form onsubmit="return sendMail(this);">
             <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
@@ -27,5 +52,40 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="row">
+            <div class="col-sm-4">
+                <a href="index.html">
+                    <img class="footer-logo" src="assets/images/logo.png" alt="logo">
+                </a>
+            </div>
+            <div class="col-sm-4">
+                <ul class="list-inline socials">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/fskerritt">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/fayskerritt/">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://github.com/fayskerritt">
+                            <i class="far fa-envelope" aria-hidden="true"></i>
+                            <span class="sr-only">GitHub</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h6 class="footer-item">© Cocktail Club 2020. <p>Crazy about Cocktails!</p></h6>
+            </div>
+        </div>
+    </footer>
 </body>
+</html>
 
