Changed class name of section header and added content to info.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     <section class="content">
-        <h2 class="searchheader">Your favourite cocktail recipes, all in one place</h2>
+        <h2 class="section-header">Your favourite cocktail recipes, all in one place</h2>
         <h2>Margarita</h2>
         <h2>Mojito</h2>
         <h2>Cosmopolitan</h2>
