--- a/info.html
+++ b/info.html
@@ -33,31 +33,9 @@
             </div>
         </nav>
     <section class="content">
-        <h2 class="searchheader">Your favourite cocktail recipes, all in one place</h2>
-        <h2>Margarita</h2>
-        <h2>Mojito</h2>
-        <h2>Cosmopolitan</h2>
-        <h2>Tom Collins</h2>
-        <h2>Gin Bramble</h2>
-        <h2>Espresso Martini</h2>
-        <h2>Margarita</h2>
-        <h2>Mojito</h2>
-        <h2>Cosmopolitan</h2>
-        <h2>Tom Collins</h2>
-        <h2>Gin Bramble</h2>
-        <h2>Espresso Martini</h2>
-        <h2>Margarita</h2>
-        <h2>Mojito</h2>
-        <h2>Cosmopolitan</h2>
-        <h2>Tom Collins</h2>
-        <h2>Gin Bramble</h2>
-        <h2>Espresso Martini</h2>
-        <h2>Margarita</h2>
-        <h2>Mojito</h2>
-        <h2>Cosmopolitan</h2>
-        <h2>Tom Collins</h2>
-        <h2>Gin Bramble</h2>
-        <h2>Espresso Martini</h2>
+        <h2 class="section-header">Staying in is the new going out!</h2>
+        <p>Here at the Cocktail Club we want to make staying at home the best it can be.</p>
+        <p>We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</p>
         
     </section>
     <footer>
