--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <title>Cocktail Club</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script type="text/javascript">
-    (function(){
-      emailjs.init("user_QYskVycifaK0UqgrfkXIi");
-    })();
+        (function(){
+        emailjs.init("user_QYskVycifaK0UqgrfkXIi");
+        })();
     </script>
 </head>
 <body>
@@ -47,8 +47,8 @@
             <form onsubmit="return sendMail(this);">
             <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
             <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
-            <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
+            <textarea rows="5" name="request" class="form-control" id="request" placeholder="Request" required></textarea>
+            <button type="submit" class="btn btn-secondary center-block">Send Request</button>
             </form>
         </div>
     </section>
