Added images to folder

--- a/info.html
+++ b/info.html
@@ -34,9 +34,14 @@
         </nav>
     <section class="content">
         <h2 class="section-header">Staying in is the new going out!</h2>
-        <p>Here at the Cocktail Club we want to make staying at home the best it can be.</p>
-        <p>We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</p>
-        
+        <div class="container-fluid banner-image">
+            <div class="row">
+                <p class="col col-sm-10">Here at the Cocktail Club we want to make staying at home the best it can be.</p>
+            </div>
+            <div class="row">
+                <p class="col col-sm-10">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</p>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="row">
@@ -68,7 +73,8 @@
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h6 class="footer-item">© Cocktail Club 2020. <p>Crazy about Cocktails!</p></h6>
+                <h6 class="footer-item">© Cocktail Club 2020.</h6>
+                <p>Crazy about Cocktails!</p>
             </div>
         </div>
     </footer>
