Changed styling on info.html and added in sendEmail.js file

--- a/info.html
+++ b/info.html
@@ -34,12 +34,13 @@
         </nav>
     <section class="content">
         <h2 class="section-header">Staying in is the new going out!</h2>
-        <div class="container-fluid banner-image">
-            <div class="row">
-                <p class="col col-sm-10">Here at the Cocktail Club we want to make staying at home the best it can be.</p>
+        <div class="container-fluid hero-image">
+        <div class="opaque-overlay">&nbsp</div>
+            <div class="row hero-text-top">
+                <h5 class="col-12 col-md-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
             </div>
-            <div class="row">
-                <p class="col col-sm-10">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</p>
+            <div class="row hero-text-bottom">    
+                <h5 class="col-12 col-md-4">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
             </div>
         </div>
     </section>
@@ -73,8 +74,7 @@
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h6 class="footer-item">© Cocktail Club 2020.</h6>
-                <p>Crazy about Cocktails!</p>
+                <h6 class="footer-item">© Cocktail Club 2020. <small>Crazy about Cocktails!</small></h6>
             </div>
         </div>
     </footer>
