--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
-        <a class="navbar-brand" href="index.html">
+        <a href="index.html">
             <img class="logo" src="assets/images/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>            
         <div class="collapse navbar-collapse" id="nav-menu">
-            <ul class="navmenu navbar-nav ml-auto">
+            <ul class="navmenu ml-auto">
                 <li class="navitem">
                     <a href="index.html">Home <i class="fas fa-cocktail" aria-hidden="true"></i></a>
                 </li>
@@ -90,6 +90,9 @@
         </div>
     </footer>
     <script src="assets/js/sendEmail.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
 
