Updated styling in navbar and added tips and tricks to info.html

--- a/info.html
+++ b/info.html
@@ -37,10 +37,40 @@
         <div class="container-fluid hero-image">
         <div class="opaque-overlay">&nbsp</div>
             <div class="row hero-text-top">
-                <h5 class="col-12 col-md-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
+                <h5 class="col-12 col-xl-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
+            </div>
+            <div class="row hero-text-middle">    
+                <h5 class="col-12 col-xl-4">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
             </div>
             <div class="row hero-text-bottom">    
-                <h5 class="col-12 col-md-4">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
+                <h5 class="col-12 col-xl-4">See below for our tips and tricks on making homemade cocktails like a professional</h5>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2 class="section-header">At home cocktail tips and tricks</h2>
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-md-2 my-auto">
+                <img class="tips-icon" src="assets/images/cocktailshaker.png" alt="Cocktail Shaker">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                <p>If you don’t have the infamous cocktail shaker then don’t panic, simply substitute it for an old jar with a screw lid, or a kilner jar.</p>
+            </div>
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-md-2 my-auto">
+                <img class="tips-icon" src="assets/images/sieve.png" alt="Cocktail Shaker">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                <p>Some cocktails need to be sieved, if you don’t have any kind of sieve then attach some cling film to the top of your jar with an elastic band and pierce some holes in it!</p>
+            </div>
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-md-2 my-auto">
+                <img class="tips-icon" src="assets/images/shotglass.png" alt="Cocktail Shaker">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                <p>For the measuring, if you don’t have a shot glass measure, you can use an egg cup or alternatively 3 tablespoon measures.</p>
             </div>
         </div>
     </section>
