edited styling on index.html and uploaded some backgrouns photos

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
             </ul>
         </div>
     </nav>
-    <section class="content container">
+    <section class="content">
         <h2 class="section-header">Your favourite cocktail recipes, all in one place</h2>
-        <div class="row text-center">
-            <button class="search-button" id="get_cocktail">Find Cocktail <i class="fas fa-cocktail"></i></button>
-        </div>
-        <div id="cocktail" class="row cocktail"></div>
+        <div class="search-image">
 
+            <div class="row justify-content-around">
+                <button class="search-button btn-dark shadow-none" id="get_cocktail">Find Cocktail <i class="fas fa-cocktail"></i></button>
+            </div>
+            <div id="cocktail" class="row cocktail"></div>
+        </div>
         <!-- <div class="cocktail-form">
                 <input type="text" id="cocktail-recipe">
             </div> -->
