--- a/info.html
+++ b/info.html
@@ -34,8 +34,8 @@
     </nav>
     <section class="content">
         <h2 class="section-header">Staying in is the new going out!</h2>
-        <div class="container-fluid hero-image">
-        <div class="opaque-overlay">&nbsp</div>
+        <div class="container-fluid info-image">
+            <div class="opaque-overlay">&nbsp</div>
             <div class="row hero-text-top">
                 <h5 class="col-12 col-xl-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
             </div>
