Changed background images and styled cocktail search area

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="search-image">
 
             <div class="row justify-content-around">
-                <button class="search-button btn-dark shadow-none" id="get_cocktail">Find Cocktail <i class="fas fa-cocktail"></i></button>
+                <button class="search-button btn-secondary shadow-none" id="get_cocktail">Find Cocktail <i class="fas fa-cocktail"></i></button>
             </div>
             <div id="cocktail" class="row cocktail"></div>
         </div>
