More style changes to headings

--- a/info.html
+++ b/info.html
@@ -33,9 +33,9 @@
         </div>
     </nav>
     <section class="content">
-        <h2 class="section-header">Staying in is the new going out!</h2>
         <div class="container-fluid info-image">
             <div class="opaque-overlay">&nbsp</div>
+            <h2 class=" col-12 section-header">Staying in is the new going out!</h2>
             <div class="row hero-text-top">
                 <h5 class="col-12 col-xl-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
             </div>
