Edited info section styling on mobile device

--- a/info.html
+++ b/info.html
@@ -48,7 +48,7 @@
         </div>
     </section>
     <section>
-        <h2 class="section-header">At home cocktail tips and tricks</h2>
+        <h2 class="section-header" id="section-header-dark">At home cocktail tips and tricks</h2>
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-2 my-auto">
                 <img class="tips-icon" src="assets/images/cocktailshaker.png" alt="Cocktail Shaker">
