jquery to hide and show result-heading

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class="content">
 
         <div class="search-image">
+            <h1 class="header">Cocktail Club</h1>
             <h2 class="section-header">Your favourite cocktail recipes, all in one place</h2> 
             <div class="cocktail-form row"> 
                 <form class="submit" id="submit">
