Changed layout of cocktail recipe & added in category to JS

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <div class="cocktail-form row"> 
                 <form class="submit" id="submit">
                     <input type="text" id="cocktail-search" class="cocktail-search" placeholder="Search for a cocktail here...">
-                    <button type="submit" class="search-button btn-secondary" id="search-button">Search</button>
+                    <button type="submit" class="search-button btn-light" id="search-button">Search</button>
                     
                 </form>
-                <button class="search-button btn-secondary" id="get_cocktail">Random Cocktail <i class="fas fa-cocktail"></i></button>
+                <button class="search-button btn-light" id="get_cocktail">Random Cocktail <i class="fas fa-cocktail"></i></button>
                 <label for="cocktail-search" class="error-message">Please enter a cocktail!</label>
                 <div id="result-heading"></div>
                 <div id="cocktail-list" class="cocktail-list"></div>
