--- a/info.html
+++ b/info.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cocktail Club</title>
@@ -34,7 +33,7 @@
     </nav>
     <section class="content">
         <div class="container-fluid info-image">
-            <div class="opaque-overlay">&nbsp</div>
+            <div class="opaque-overlay">&nbsp;</div>
             <h2 class=" col-12 section-header">Staying in is the new going out!</h2>
             <div class="row hero-text-top">
                 <h5 class="col-12 col-xl-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
@@ -43,7 +42,7 @@
                 <h5 class="col-12 col-xl-4">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
             </div>
             <div class="row hero-text-bottom">    
-                <h5 class="col-12 col-xl-4">See below for our tips and tricks on making homemade cocktails like a professional</h5>
+                <h5 class="col-12 col-xl-4">See below for our tips and tricks on making homemade cocktails like a professional.</h5>
             </div>
         </div>
     </section>
@@ -104,12 +103,12 @@
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h6 class="footer-item">© Cocktail Club 2020. <small>Crazy about Cocktails!</small></h6>
+                <p class="footer-item"><strong>© Cocktail Club 2020.</strong><br>Crazy about Cocktails!</p>
             </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
