--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="https://github.com/fayskerritt">
+                        <a target="_blank" href="contact.html">
                             <i class="far fa-envelope" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
