--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                     <button type="submit" class="button btn-light" id="search-button">Search</button>
                     
                 </form>
-                <button class="button btn-light" id="get_cocktail">Random Cocktail <i class="fas fa-cocktail"></i></button>
+                <button class="button btn-light" id="random-cocktail">Random Cocktail <i class="fas fa-cocktail"></i></button>
                 <label for="cocktail-search" class="error-message">Please enter a cocktail!</label>
                 <div id="result-heading"></div>
                 <div id="cocktail-list" class="cocktail-list"></div>
                 <div id="cocktail"></div>
+            </div>
+            <div class="random-section">
+                <div class="random-selection" id="random-selection"></div>
             </div>
         </div>
 
@@ -74,7 +77,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="https://github.com/fayskerritt">
+                        <a target="_blank" href="contact.html">
                             <i class="far fa-envelope" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
@@ -91,6 +94,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="assets/js/cocktail-search.js"></script>
+    <script src="assets/js/cocktail.js"></script>
 </body>
 </html>
