--- a/info.html
+++ b/info.html
@@ -36,13 +36,19 @@
             <div class="opaque-overlay">&nbsp;</div>
             <h2 class=" col-12 section-header">Staying in is the new going out!</h2>
             <div class="row hero-text-top">
-                <h5 class="col-12 col-xl-4">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
+                <span class="col-12 info">
+                    <h5 class="mx-auto">Here at the Cocktail Club we want to make staying at home the best it can be.</h5>
+                </span>
             </div>
             <div class="row hero-text-middle">    
-                <h5 class="col-12 col-xl-4">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
+                <span class="col-12 info">
+                    <h5 class="mx-auto">We aim to provide you with a library of cocktail recipes that you can make from the comfort of your own home!</h5>
+                </span>
             </div>
-            <div class="row hero-text-bottom">    
-                <h5 class="col-12 col-xl-4">See below for our tips and tricks on making homemade cocktails like a professional.</h5>
+            <div class="row hero-text-bottom">
+                <span class="col-12 info">   
+                    <h5 class="mx-auto">See below for our tips and tricks on making homemade cocktails like a professional.</h5>
+                </span>
             </div>
         </div>
     </section>
@@ -95,7 +101,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="https://github.com/fayskerritt">
+                        <a target="_blank" href="contact.html">
                             <i class="far fa-envelope" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
