--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://kit.fontawesome.com/8aee7f1a3a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8aee7f1a3a.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="assets/js/cocktail.js"></script>
 </body>
