--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">      
+    <link rel="stylesheet" href="assets/css/style.css">  
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">    
     <title>Cocktail Club</title>
     
 </head>
