--- a/info.html
+++ b/info.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">  
     <title>Cocktail Club</title>
-    
 </head>
 <body>
+    <!------------------- Navbar ------------------->
     <nav class="navbar navbar-expand-md navbar-light sticky-top">
         <a href="index.html">
             <img class="logo" src="assets/images/logo.png" alt="logo">
@@ -32,6 +32,7 @@
             </ul>
         </div>
     </nav>
+    <!------------------- Hero container ------------------->
     <section class="content">
         <div class="container-fluid info-image">
             <div class="opaque-overlay">&nbsp;</div>
@@ -53,6 +54,7 @@
             </div>
         </div>
     </section>
+    <!------------------- Info container ------------------->
     <section>
         <h2 class="section-header" id="section-header-dark">At home cocktail tips and tricks</h2>
         <div class="row justify-content-md-center">
@@ -80,6 +82,7 @@
             </div>
         </div>
     </section>
+    <!------------------- Footer ------------------->
     <footer>
         <div class="row">
             <div class="col-sm-4">
@@ -114,6 +117,7 @@
             </div>
         </div>
     </footer>
+    <!------------------- Scripts ------------------->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
